# d1ff

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
benchmark/: __init__.py  context_loader.py  report.py  runner.py
benchmark/dataset/: README.md
docs/: self-hosting.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  globals.css
prompts/claude/: review.xml  summary.xml  verify.xml
prompts/deepseek/: review.txt  summary.txt  verify.txt
prompts/openai/: review.json  verify.json
src/d1ff/: config.py  main.py
tests/: conftest.py  test_config.py  test_docker_config.py
tests/test_benchmark/: test_context_loader.py  test_report.py
tests/test_comments/: test_cost_badge.py  test_review_poster.py  test_severity_formatter.py  test_suggestion_builder.py
tests/test_context/: test_context_builder.py  test_diff_collector.py  test_file_collector.py  test_import_resolver.py  test_models.py
tests/test_docs/: test_contributing.py  test_env_example.py  test_license.py  test_readme.py  test_self_hosting.py
tests/test_feedback/: test_reaction_collector.py
tests/test_middleware/: test_rate_limit.py
tests/test_observability/: test_error_reporter.py  test_health_checker.py  test_health_route.py  test_log_config.py
tests/test_pipeline/: test_models.py  test_orchestrator.py  test_review_pass.py  test_summary_pass.py  test_verification_pass.py
tests/test_prompts/: test_loader.py
tests/test_providers/: test_cost_tracker.py  test_llm_client.py  test_model_router.py
(+116 files in other folders)
