[project]
name = "d1ff"
version = "0.1.0"
description = "AI-powered code review tool"
readme = "README.md"
authors = [
    { name = "tedmenshakov", email = "tedmenshakov@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.0.0",
  "structlog>=24.0.0",
  "asyncpg>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "alembic>=1.14.0",
  "pgvector>=0.3.0",
  "cryptography>=43.0.0",
  "authlib>=1.3.0",
  "githubkit>=0.12.0",
  "litellm>=1.50.0",
  "slowapi>=0.1.9",
  "tree-sitter>=0.23.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-typescript>=0.23.0",
  "tree-sitter-java>=0.23.0",
  "tree-sitter-c-sharp>=0.23.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
  "aiofiles>=23.0.0",
  "click>=8.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
  "types-cryptography",
  "testcontainers[postgres]>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/d1ff"]


[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".claude", ".cursor", "_bmad", "_bmad-output", "design-artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["d1ff"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]
